[backend/frontend] update screen for expectation by player